--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
     "name": "react-native-remodal",
     "version": "1.0.0-alpha.2",
     "description": "A \"re\" implementation of the classic react native modal",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/BrendonSled/react-native-remodal"
+    },
     "main": "dist/index.js",
     "private": false,
     "scripts": {
